Changed waypoint naming schema to allow for faster searching with unique identifier